--- a/about.yml
+++ b/about.yml
@@ -1,9 +1,9 @@
 ---
 # Если хотите пояснить код, можно добавить комментарий с помощью символа #
-name: Ilona Maskova # Ваше имя
+name: Дарья # Ваше имя
 job: QA Engineer
 level: junior
-email: ilona@hexlet.io
+email: daryais1049@gmail.com
 description: |
   Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
 
@@ -11,6 +11,5 @@ description: |
 skills: # Список навыков в виде списка, можете написать сюда что-то свое
   - Функциональное тестирование
   - Написание багрепортов
-  - Linux
   - Слепая печать
-  - Английский язык C1
+  - Английский язык 
