--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,7 +5,7 @@
   requirement: |
     В результате отоброжаются товары соответствующие введённому запросу
   prerequisites: |
-    Открыта главная страница
+    Открыта главная страница магазина
   test-data: |
     Поиск по слову "fauji"
   steps:
@@ -19,9 +19,9 @@
   requirement: |
     При использовании фильтров должны отображаться соответсвующие фильтру товары 
   prerequisites:
-    Открыта главная страница
+    Открыта главная страница магазина
   test-data: |
-    Фильтор по категории "skincare"
+    Фильтр по категории "skincare"
   steps:
     - Выбираем категорию "skincare" 
     - Проверяем результат на соответсвие категории
@@ -33,7 +33,7 @@
   requirement: |
     В результате отоброжаются товары соответствующие по цене  введённому запросу
   prerequisites: |
-    Открыта главная страница
+    Открыта главная страница магазина
   test-data: |
     Применение фильтра по цене от 10 до 300
   steps:
@@ -47,9 +47,9 @@
   requirement: |
     При использовании фильтров должны отображаться соответсвующие фильтру товары 
   prerequisites:
-    Открыта главная страница
+    Открыта главная страница магазина 
   test-data: |
-    Фильтор по бренду "Hemani Tea"
+    Фильтр по бренду "Hemani Tea"
   steps:
     - Выбираем бренд "Hemani Tea" 
     - Проверяем результат на соответсвие бренду
@@ -57,19 +57,94 @@
     При выборе бренда  отображаются только соответсвующие товары 
 
 - summary: |
-    Проверка корректности работы корзины 
+    Проверка добавления товара в корзину
   requirement: |
-    Товар добавляется в корзину, при переходе в корзину товар отображается и может быть удален
+    Товар добавляется в корзину и коректно отображается   
   prerequisites: |
-    Открыта главная страница
+    Открыта главная страница магазина 
   test-data: |
-    Добавление в корзину товара "Macbook Pro" 
+    Добавление товара iphone x 
   steps:
-    - Применяем фильр по бренду "Apple"
-    - Нажимаем на кнопку "add to cart" на товаре "Macbook Pro"
-    - Переходим в корзину по кнопке "cart"
-    - Товар в корзине отображается корректо 
-    - Нажимаем кнопку "Delite"
-    - Товар удален
+    - Выбираем товар iphone x 
+    - Нажимаем на кнопку "В корзину"
+    - Нажимаем на кнопку "Корзина"
+    - Проверяем, что товар добавлен в корзину
   expected-result: |
-    Товар добавляется в корзину, отображается корректно и может быть удален  
+    Выбранный товар добавляется в корзину и отображается корректно 
+
+    - summary: |
+    Проверка удаления товара из корзины
+  requirement: |
+    Товар удаляется и больше не отображается в корзине 
+  prerequisites: |
+    Открыта главная страница сайта магазина 
+  test-data: |
+    Добавление товара iphone х
+  steps:
+    - Выбираем товар iphone x 
+    - Нажимаем на кнопку "В корзину"
+    - Нажимаем на кнопку "Корзина"
+    - Нажимаем кнопку "Удалить"
+  expected-result: |
+    Товар не отображается в корзине после удаления
+
+    - summary: |
+    Оформление заказа
+  requirement: |
+    Заказ можно оформить
+  prerequisites: |
+    Открыта главная страница магазина
+  test-data: |
+    Добавление товара iphone х
+  steps:
+    - Выбираем товар iphone x 
+    - Нажимаем на кнопку "В корзину"
+    - Нажимаем на кнопку "Корзина"
+    - Нажимаем кнопку "Оформить заказ"
+  expected-result: |
+    Заказ успешно оформлен 
+
+    - summary: |
+    Проверка переключения языка сайта
+  requirement: |
+    При переключении языка сайт переводиться на выбранный язык
+  prerequisites: |
+    Открыта главная странца магазина
+  test-data: |
+    Выбор язык для перевода сайта - русский
+  steps:
+    - Нажимаем кнопку "language"
+    - Выбираем язык "Russian" из выпадающего меню 
+    - Проверяем результат
+  expected-result: |
+     При выборе смене языка сайт переводится на выбранный язык
+
+     - summary: |
+    Проверка возможности перейти на страницу товара 
+  requirement: |
+    При нажатии на товар из каталога, открывается страница товара с описанием и ценой, работает корректно 
+  prerequisites: |
+    Открыта главная страница магазина
+  test-data: |
+    Выбор товара iphone х
+  steps:
+    - Нажимаем товар iphone х
+    - Проверяем открылась ли страница
+  expected-result: |
+     При нажатии на товар открывается страница со сведениями о товаре
+
+     - summary: |
+    Проверка работы кнопок для перелистывания страниц каталога товаров 
+  requirement: |
+    При использовании кнопок "Предыдущая" и "Следующая" происходит перелистывание страниц каталога товаров, сайт работает корректно 
+  prerequisites: |
+    Открыта главная странца магазина
+  test-data: |
+    Кнопки "Предыдущая" и "Следующая"
+  steps:
+    - Нажимаем кнопку "Следующая"
+    - Проверяем результат
+    - Нажимаем кнопку "Предыдущая"
+    - Проверяем результат
+   expected-result: |
+     Кнопки "Предыдущая" и "Следующая" перелистывают страницы католога товаров
