--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Не работает добавление товара в корзину
+    Не работает оформление заказ
   environment: |
     Yandex 24.1.5.825 (64-bit)
     macOS Monterey 12.7
@@ -8,24 +8,36 @@
     1. Зайти на главную страницу магазина 
     2. Нажать кнопку "В корзину" на товаре
     3. Перейти в корзину
+    4. Нажать на кнопку "Оформить заказ"
   expected-result: |
-    Товар добавляется в корзину и отоброжается корректно 
+    Заказ успешно оформлен
   actual-result: |
-    Товар не добавляется в корзину и не отображается. 
+    Ошибка сервера 500 
 
 - summary: |
-    Изменяется url в адресной строке браузера, не работают вкладки LOBBY/TOURNAMENT/COMPLETED GAMES
+    Описание товара не переводится при смене языка сайта
   environment: |
-    Google Chrome	107.0.5304.121 (Официальная сборка) (64 бит)
-    ОС Linux
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
   steps-to-reproduce: |
-    1. Залогиниться в системе https://codebattle.hexlet.io/session/new?locale=en&next=%2F
-    2. Переключить Лидерборд по сроку (месяц/неделя/за все время)
-    3. Переключить LOBBY/TOURNAMENT/COMPLETED GAMES
+    1. Зайти на главную страницу магазина 
+    2. Нажать кнопку "Language" 
+    3. Выбрать "Russian" из выпадающего меню
   expected-result: |
-    url в адресной строке не меняется
-    Вкладки работают
+    Сайт переводиться на выбраный язык
   actual-result: |
-    При нажатии на week,month,all в urlHash появляется '!'
-    Вкладки не работают.
-    Ошибка изображена на скриншоте assets/bug.png
+   Описание товаров не переводится русский язык 
+
+   - summary: |
+    Иконка языка "english" отображается некоректно 
+  environment: |
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
+  steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Нажать кнопку "Language" 
+  expected-result: |
+    В выпадающем меню языки и иконки-флаги отображаются корректно 
+  actual-result: |
+   Ошибка изображена на скриншоте assets/bug.png 
+
