--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Не работает оформление заказ
+    Не работает оформление заказа
   environment: |
     Yandex 24.1.5.825 (64-bit)
     macOS Monterey 12.7
@@ -28,7 +28,7 @@
   actual-result: |
    Описание товаров не переводится русский язык 
 
-   - summary: |
+- summary: |
     Иконка языка "english" отображается некоректно 
   environment: |
     Yandex 24.1.5.825 (64-bit)
@@ -39,5 +39,19 @@
   expected-result: |
     В выпадающем меню языки и иконки-флаги отображаются корректно 
   actual-result: |
-   Ошибка изображена на скриншоте assets/bug.png 
+   Ошибка изображена на скриншоте screenshot1 
 
+- summary: |
+    Кнопки "Предыдущая" и "Следующая" для перехода по страницам каталога работают не корректно  
+  environment: |
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
+  steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Нажать кнопку "Следующая"
+    3. Нажать кнопку "Следующая"
+    4. Нажать кнопку "Предыдущая"
+  expected-result: |
+    Страницы каталога перелистываются 
+  actual-result: |
+   Кнопки "Предыдущая" и "Следующая" переключают категории 
