--- a/bugreports.yml
+++ b/bugreports.yml
@@ -55,3 +55,49 @@
     Страницы каталога перелистываются 
   actual-result: |
    Кнопки "Предыдущая" и "Следующая" переключают категории 
+
+- summary: |
+    Товары остаются в корзине после оформления заказа   
+  environment: |
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
+  steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Нажать кнопку "В корзину" на выбраном товаре 
+    3. Нажать кнопку "Корзина"
+    4. Нажать кнопку "Оформить заказ"
+    5. Нажать кнопку "Закрыть" на сообщении об успешнеом оформлении заказа
+  expected-result: |
+    Заказанные товары исчезают из корзины 
+  actual-result: |
+   Товары из уже оформленного заказа остаются в корзине.
+
+- summary: |
+    Сайт не адаптирован под мобильные устройства    
+  environment: |
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
+  steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Открыть DevTools 
+    3. Воспользоваться режмом эмуляции мобильных устройств
+    4. Выбрать режим эмуляции Iphone 12 pro
+  expected-result: |
+    Элементы сайта отображаются корректно  
+  actual-result: |
+   Элементы сайта деформированы, поля смещены со своих мест и накладываются на карточки товаров.
+
+- summary: |
+    Не работает переход к категории по хэштегу     
+  environment: |
+    Yandex 24.1.5.825 (64-bit)
+    macOS Monterey 12.7
+  steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Нажать на товар Essence Mascara Lash Princess  
+    3. Нажать на хэштег #beauty
+  expected-result: |
+    Отображаются товары из катергории beauty  
+  actual-result: |
+   К URL добавляется символ #
+   Каталог не открывается, страница не меняется 
