--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,9 +7,9 @@
   prerequisites: |
     Открыта главная страница магазина
   test-data: |
-    Поиск по слову "fauji"
+    Поиск по слову "milk"
   steps:
-    - Вводим слово "fauji" в поисковую строку
+    - Вводим слово "milk" в поисковую строку
     - Проверяем результат 
   expected-result: |
     Результат поиска соответсвует введенному запросу 
