--- a/test-cases.yml
+++ b/test-cases.yml
@@ -148,3 +148,17 @@
     - Проверяем результат
    expected-result: |
      Кнопки "Предыдущая" и "Следующая" перелистывают страницы католога товаров
+
+- summary: |
+    Проверка функции удаления товаров из корзины 
+  requirement: |
+    При нажатии на товар из каталога, открывается страница товара с описанием и ценой, работает корректно 
+  prerequisites: |
+    Открыта главная страница магазина
+  test-data: |
+    Выбор товара iphone х
+  steps:
+    - Нажимаем товар iphone х
+    - Проверяем открылась ли страница
+  expected-result: |
+     При нажатии на товар открывается страница со сведениями о товаре
