--- a/test-cases.yml
+++ b/test-cases.yml
@@ -152,13 +152,16 @@
 - summary: |
     Проверка функции удаления товаров из корзины 
   requirement: |
-    При нажатии на товар из каталога, открывается страница товара с описанием и ценой, работает корректно 
+    После оформления заказа товары не отображаются в корзине  
   prerequisites: |
     Открыта главная страница магазина
   test-data: |
-    Выбор товара iphone х
+    Выбор товара red nail polish
   steps:
-    - Нажимаем товар iphone х
-    - Проверяем открылась ли страница
+    - Нажимаем товар red nail polish
+    - Нажимаем на кнопку "В корзину"
+    - Нажимаем на кнопку "Корзина"
+    - Нажимаем на кнопку "Оформить заказ"
+    - Нажимаем на кнопку "Закрыть" 
   expected-result: |
-     При нажатии на товар открывается страница со сведениями о товаре
+     После оформления заказа товары больше не отображаются в корзине
