--- a/test-cases.yml
+++ b/test-cases.yml
@@ -150,7 +150,7 @@
      Кнопки "Предыдущая" и "Следующая" перелистывают страницы католога товаров
 
 - summary: |
-    Проверка функции удаления товаров из корзины 
+    Проверка функции удаления товаров из корзины после оформлени заказа
   requirement: |
     После оформления заказа товары не отображаются в корзине  
   prerequisites: |
