--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,12 +1,12 @@
 - summary: |
     Проверка работы поиска по сайту
-  status: pass
+  status: fail
 
 - summary: |
     Проверка работы фильтров по категориям
   status: pass
 
-  - summary: |
+- summary: |
     Проверка работы фильтра по цене
   status: pass
 
@@ -14,6 +14,30 @@
     Проверка работы фильтров по брендам
   status: pass
 
-  - summary: |
-    Проверка корректности работы корзины 
+- summary: |
+    Проверка добавления товаров в корзину 
   status: pass
+
+- summary: |
+    Проверка удаления товара из корзины 
+  status: pass
+
+- summary: |
+    Проверка оформления заказа  
+  status: fail
+
+- summary: |
+    Проверка переключения языка сайта  
+  status: fail
+
+- summary: |
+    Проверка возможности перейти на страницу товара  
+  status: pass
+
+- summary: |
+    Проверка работы кнопок для перелистывания страниц каталога товаров  
+  status: fail
+
+  - summary: |
+    Проверка функции удаления товаров из корзины после оформления заказа   
+  status: fail
