--- a/test-cases.yml
+++ b/test-cases.yml
@@ -165,3 +165,17 @@
     - Нажимаем на кнопку "Закрыть" 
   expected-result: |
      После оформления заказа товары больше не отображаются в корзине
+
+- summary: |
+    Проверка форм ввода на xss-уязвимость
+  requirement: |
+    Формы ввода должны быть защищены от xss-атак 
+  prerequisites: |
+    Открыта главная страница магазина
+  test-data: |
+    JavaScript-код для проверки - <script>alert(123)</script>
+  steps:
+    - Вводим слово "<script>alert(123)</script" в поисковую строку
+    - Проверяем результат 
+  expected-result: |
+    Появляется всплывающее окно если уязвимость есть 
