--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,6 +1,6 @@
 - summary: |
     Проверка работы поиска по сайту
-  status: fail
+ status: fail
 
 - summary: |
     Проверка работы фильтров по категориям
@@ -38,6 +38,11 @@
     Проверка работы кнопок для перелистывания страниц каталога товаров  
   status: fail
 
-  - summary: |
+- summary: |
     Проверка функции удаления товаров из корзины после оформления заказа   
   status: fail
+
+- summary: |
+    Проверка форм ввода на xss-уязвимость
+status: pass
+ 
