--- a/test-cases.yml
+++ b/test-cases.yml
@@ -179,3 +179,16 @@
     - Проверяем результат 
   expected-result: |
     Появляется всплывающее окно если уязвимость есть 
+
+- summary: |
+    Проверка перехода к категории по клику на хэштег
+  requirement: |
+    Переход к категории соответвующей хэштегу  
+  prerequisites: |
+    Открыта страница товара Essence Mascara Lash Princess
+  test-data: |
+    хэштег #beauty
+  steps:
+    - Нажимаем на хэштег #beauty
+  expected-result: |
+   Открываетя каталог товаров соответвующей категории
