--- a/test-cases.yml
+++ b/test-cases.yml
@@ -191,4 +191,20 @@
   steps:
     - Нажимаем на хэштег #beauty
   expected-result: |
-   Открываетя каталог товаров соответвующей категории
+   Открывается каталог товаров соответвующей категории
+
+- summary: |
+    Проверка сайта на адаптивность к мобильным устройствам
+  requirement: |
+    Сайт должен быть удобным для использования на мобильных устройствах   
+  prerequisites: |
+    Открыта главная страница магазина 
+  test-data: |
+    Адаптивность
+  steps:
+    1. Зайти на главную страницу магазина 
+    2. Открыть DevTools 
+    3. Воспользоваться режмом эмуляции мобильных устройств
+    4. Выбрать режим эмуляции Iphone 12 pro
+  expected-result: |
+   Элементы сайта отображаются корректно
