--- a/testing-report.yml
+++ b/testing-report.yml
@@ -50,5 +50,7 @@ status: pass
     Проверка перехода к категории по клику на хэштег
 status: fail
 
-
+- summary: |
+    Проверка сайта на адаптивность к мобильным устройствам
+status: fail
   
