--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,1 +1,96 @@
+---
+- summary: |
+    Проверка работы поиска по сайту
+ status: fail
 
+- summary: |
+    Проверка работы фильтров по категориям
+  status: pass
+
+- summary: |
+    Проверка работы фильтра по цене
+  status: fail
+
+- summary: |
+    Проверка работы фильтров по брендам
+status: pass
+
+- summary: |
+    Проверка добавления товаров в корзину 
+status: pass
+
+- summary: |
+    Проверка удаления товара из корзины 
+status: pass
+
+- summary: |
+    Проверка оформления заказа  
+status: fail
+
+- summary: |
+    Проверка переключения языка сайта  
+status: fail
+
+- summary: |
+    Проверка возможности перейти на страницу товара  
+status: pass
+
+- summary: |
+    Проверка работы кнопок для перелистывания страниц каталога товаров  
+status: fail
+
+- summary: |
+    Проверка функции удаления товаров из корзины после оформления заказа   
+status: fail
+
+- summary: |
+    Проверка форм ввода на xss-уязвимость
+status: pass
+
+- summary: |
+    Проверка перехода к категории по клику на хэштег
+status: pass
+
+- summary: |
+    Проверка сайта на адаптивность к мобильным устройствам
+status: pass
+
+bugreports:
+  - summary: |
+      Язык переключается на "English" после перехода из корзины на главную страницу магазина
+    environment: |
+      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Нажать кнопку "Language" на товаре
+    3. Выбрать язык "Russian"
+    4. Нажать на кнопку "Корзина"
+    5. Нажать на кнопку "Магазин"
+    expected-result: |
+      Язык сайта не должен меняться 
+    actual-result: |
+      Язык сайта меняется на "English"
+
+  - summary: |
+      Проверка работы фильтра по цене 
+    environment: |
+      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Ввести диапазон цен от 20 до 40  
+    expected-result: |
+      В каталоге отображаются только товары подходящие под ценовой диапазон  
+    actual-result: |
+      В каталоге отображаются товары вне заданного ценового диапазона
+
+  - summary: |
+      Проверка работы фильтра по цене 
+    environment: |
+      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Ввести диапазон цен от 20 до 40  
+    expected-result: |
+      В каталоге отображаются только товары подходящие под ценовой диапазон  
+    actual-result: |
+      В каталоге отображаются товары вне заданного ценового диапазона
