--- a/regress-report.yml
+++ b/regress-report.yml
@@ -94,3 +94,18 @@ bugreports:
       В каталоге отображаются только товары подходящие под ценовой диапазон  
     actual-result: |
       В каталоге отображаются товары вне заданного ценового диапазона
+
+- summary: |
+      Переход на главную страницу магазина возвращает в корзину ранее удаленные товары 
+    environment: |
+      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    steps-to-reproduce: |
+    1. Зайти на главную страницу магазина 
+    2. Добавить товар в корзину
+    3. Нажать на кнопку "Корзина"
+    4. Нажать на кнопку "Очистить корзину"
+    5. Нажать на кнопку "Магазин"
+    expected-result: |
+      Открывается главная страница магазина, корзина пуста  
+    actual-result: |
+      Открывается главная страница магазина, ранее удаленные товары возвращаются в корзину
