--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,77 +1,71 @@
 ---
-
 - summary: |
     Проверка работы поиска по сайту
   requirement: |
-    В результате отоброжаются товары соответствующие введённому запросу
+    В результате отображаются товары соответствующие введённому запросу
   prerequisites: |
     Открыта главная страница магазина
   test-data: |
     Поиск по слову "milk"
   steps:
     - Вводим слово "milk" в поисковую строку
-    - Проверяем результат 
+    - Проверяем результат
   expected-result: |
-    Результат поиска соответсвует введенному запросу 
-    
+    Результат поиска соответствует введенному запросу 
 - summary: |
     Проверка работы фильтров по категориям
-  requirement: |
-    При использовании фильтров должны отображаться соответсвующие фильтру товары 
-  prerequisites:
-    Открыта главная страница магазина
+  requirement: >
+    При использовании фильтров должны отображаться соответствующие
+    фильтру товары 
+  prerequisites: Открыта главная страница магазина
   test-data: |
     Фильтр по категории "skincare"
   steps:
-    - Выбираем категорию "skincare" 
-    - Проверяем результат на соответсвие категории
+    - Выбираем категорию "skincare"
+    - Проверяем результат на соответствие категории
   expected-result: |
-    При выборе категории "skincare" отображаются только соответсвующие товары 
-
+    При выборе категории "skincare" отображаются только соответствующие товары 
 - summary: |
     Проверка работы фильтра по цене 
   requirement: |
-    В результате отоброжаются товары соответствующие по цене  введённому запросу
+    В результате отображаются товары соответствующие по цене  введённому запросу
   prerequisites: |
     Открыта главная страница магазина
   test-data: |
     Применение фильтра по цене от 10 до 300
   steps:
     - Вводим в фильтр по цене значение от 10 до 300
-    - Проверяем результат 
+    - Проверяем результат
   expected-result: |
     Отображаются только товары входящие в заданный ценовой диапазон  
-
 - summary: |
     Проверка работы фильтров по брендам
-  requirement: |
-    При использовании фильтров должны отображаться соответсвующие фильтру товары 
-  prerequisites:
-    Открыта главная страница магазина 
+  requirement: >
+    При использовании фильтров должны отображаться соответствующие
+    фильтру товары 
+  prerequisites: Открыта главная страница магазина
   test-data: |
     Фильтр по бренду "Hemani Tea"
   steps:
-    - Выбираем бренд "Hemani Tea" 
-    - Проверяем результат на соответсвие бренду
+    - Выбираем бренд "Hemani Tea"
+    - Проверяем результат на соответствие бренду
   expected-result: |
-    При выборе бренда  отображаются только соответсвующие товары 
-
+    При выборе бренда  отображаются только соответствующие товары 
 - summary: |
     Проверка добавления товара в корзину
   requirement: |
-    Товар добавляется в корзину и коректно отображается   
+    Товар добавляется в корзину и корректно отображается   
   prerequisites: |
     Открыта главная страница магазина 
   test-data: |
     Добавление товара iphone x 
   steps:
-    - Выбираем товар iphone x 
+    - Выбираем товар iphone x
     - Нажимаем на кнопку "В корзину"
     - Нажимаем на кнопку "Корзина"
     - Проверяем, что товар добавлен в корзину
   expected-result: |
     Выбранный товар добавляется в корзину и отображается корректно 
-
 - summary: |
     Проверка удаления товара из корзины
   requirement: |
@@ -81,13 +75,12 @@
   test-data: |
     Добавление товара iphone х
   steps:
-    - Выбираем товар iphone x 
+    - Выбираем товар iphone x
     - Нажимаем на кнопку "В корзину"
     - Нажимаем на кнопку "Корзина"
     - Нажимаем кнопку "Удалить"
   expected-result: |
     Товар не отображается в корзине после удаления
-
 - summary: |
     Оформление заказа
   requirement: |
@@ -97,32 +90,31 @@
   test-data: |
     Добавление товара iphone х
   steps:
-    - Выбираем товар iphone x 
+    - Выбираем товар iphone x
     - Нажимаем на кнопку "В корзину"
     - Нажимаем на кнопку "Корзина"
     - Нажимаем кнопку "Оформить заказ"
   expected-result: |
     Заказ успешно оформлен 
-
 - summary: |
     Проверка переключения языка сайта
   requirement: |
     При переключении языка сайт переводиться на выбранный язык
   prerequisites: |
-    Открыта главная странца магазина
+    Открыта главная страница магазина
   test-data: |
     Выбор язык для перевода сайта - русский
   steps:
     - Нажимаем кнопку "language"
-    - Выбираем язык "Russian" из выпадающего меню 
+    - Выбираем язык "Russian" из выпадающего меню
     - Проверяем результат
   expected-result: |
-     При выборе смене языка сайт переводится на выбранный язык
-
+    При выборе смене языка сайт переводится на выбранный язык
 - summary: |
     Проверка возможности перейти на страницу товара 
-  requirement: |
-    При нажатии на товар из каталога, открывается страница товара с описанием и ценой, работает корректно 
+  requirement: >
+    При нажатии на товар из каталога, открывается страница товара с
+    описанием и ценой, работает корректно 
   prerequisites: |
     Открыта главная страница магазина
   test-data: |
@@ -131,14 +123,14 @@
     - Нажимаем товар iphone х
     - Проверяем открылась ли страница
   expected-result: |
-     При нажатии на товар открывается страница со сведениями о товаре
-
+    При нажатии на товар открывается страница со сведениями о товаре
 - summary: |
     Проверка работы кнопок для перелистывания страниц каталога товаров 
-  requirement: |
-    При использовании кнопок "Предыдущая" и "Следующая" происходит перелистывание страниц каталога товаров, сайт работает корректно 
+  requirement: >
+    При использовании кнопок "Предыдущая" и "Следующая" происходит
+    перелистывание страниц каталога товаров, сайт работает корректно 
   prerequisites: |
-    Открыта главная странца магазина
+    Открыта главная страница магазина
   test-data: |
     Кнопки "Предыдущая" и "Следующая"
   steps:
@@ -146,11 +138,10 @@
     - Проверяем результат
     - Нажимаем кнопку "Предыдущая"
     - Проверяем результат
-   expected-result: |
-     Кнопки "Предыдущая" и "Следующая" перелистывают страницы католога товаров
-
+  expected-result: |
+    Кнопки "Предыдущая" и "Следующая" перелистывают страницы каталога товаров
 - summary: |
-    Проверка функции удаления товаров из корзины после оформлени заказа
+    Проверка функции удаления товаров из корзины после оформлении заказа
   requirement: |
     После оформления заказа товары не отображаются в корзине  
   prerequisites: |
@@ -162,10 +153,9 @@
     - Нажимаем на кнопку "В корзину"
     - Нажимаем на кнопку "Корзина"
     - Нажимаем на кнопку "Оформить заказ"
-    - Нажимаем на кнопку "Закрыть" 
+    - Нажимаем на кнопку "Закрыть"
   expected-result: |
-     После оформления заказа товары больше не отображаются в корзине
-
+    После оформления заказа товары больше не отображаются в корзине
 - summary: |
     Проверка форм ввода на xss-уязвимость
   requirement: |
@@ -176,23 +166,21 @@
     JavaScript-код для проверки - <script>alert(123)</script>
   steps:
     - Вводим слово "<script>alert(123)</script" в поисковую строку
-    - Проверяем результат 
+    - Проверяем результат
   expected-result: |
     Появляется всплывающее окно если уязвимость есть 
-
 - summary: |
     Проверка перехода к категории по клику на хэштег
   requirement: |
-    Переход к категории соответвующей хэштегу  
+    Переход к категории соответствующей хэштегу  
   prerequisites: |
     Открыта страница товара Essence Mascara Lash Princess
   test-data: |
     хэштег #beauty
   steps:
-    - Нажимаем на хэштег #beauty
+    - Нажимаем на хэштег
   expected-result: |
-   Открывается каталог товаров соответвующей категории
-
+    Открывается каталог товаров соответствующей категории
 - summary: |
     Проверка сайта на адаптивность к мобильным устройствам
   requirement: |
@@ -201,10 +189,8 @@
     Открыта главная страница магазина 
   test-data: |
     Адаптивность
-  steps:
-    1. Зайти на главную страницу магазина 
-    2. Открыть DevTools 
-    3. Воспользоваться режмом эмуляции мобильных устройств
-    4. Выбрать режим эмуляции Iphone 12 pro
+  steps: 1. Зайти на главную страницу магазина 2. Открыть DevTools 3.
+    Воспользоваться режимом эмуляции мобильных устройств 4. Выбрать режим
+    эмуляции Iphone 12 pro
   expected-result: |
-   Элементы сайта отображаются корректно
+    Элементы сайта отображаются корректно
