--- a/regress-report.yml
+++ b/regress-report.yml
@@ -61,11 +61,11 @@
     environment: |
       Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
     steps-to-reproduce: |
-    1. Зайти на главную страницу магазина 
-    2. Нажать кнопку "Language" на товаре
-    3. Выбрать язык "Russian"
-    4. Нажать на кнопку "Корзина"
-    5. Нажать на кнопку "Магазин"
+    - Зайти на главную страницу магазина 
+    - Нажать кнопку "Language" на товаре
+    - Выбрать язык "Russian"
+    - Нажать на кнопку "Корзина"
+    - Нажать на кнопку "Магазин"
     expected-result: |
       Язык сайта не должен меняться 
     actual-result: |
@@ -76,20 +76,8 @@
     environment: |
       Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
     steps-to-reproduce: |
-    1. Зайти на главную страницу магазина 
-    2. Ввести диапазон цен от 20 до 40  
-    expected-result: |
-      В каталоге отображаются только товары подходящие под ценовой диапазон  
-    actual-result: |
-      В каталоге отображаются товары вне заданного ценового диапазона
-
-  - summary: |
-      Проверка работы фильтра по цене 
-    environment: |
-      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
-    steps-to-reproduce: |
-    1. Зайти на главную страницу магазина 
-    2. Ввести диапазон цен от 20 до 40  
+    - Зайти на главную страницу магазина 
+    - Ввести диапазон цен от 20 до 40  
     expected-result: |
       В каталоге отображаются только товары подходящие под ценовой диапазон  
     actual-result: |
@@ -100,11 +88,11 @@
   environment: |
       Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
   steps-to-reproduce: |
-    1. Зайти на главную страницу магазина 
-    2. Добавить товар в корзину
-    3. Нажать на кнопку "Корзина"
-    4. Нажать на кнопку "Очистить корзину"
-    5. Нажать на кнопку "Магазин"
+    - Зайти на главную страницу магазина 
+    - Добавить товар в корзину
+    - Нажать на кнопку "Корзина"
+    - Нажать на кнопку "Очистить корзину"
+    - Нажать на кнопку "Магазин"
     expected-result: |
       Открывается главная страница магазина, корзина пуста  
   actual-result: |
