--- a/test-cases.yml
+++ b/test-cases.yml
@@ -202,8 +202,10 @@
     Открыта главная страница магазина 
   test-data: |
     Адаптивность
-  steps: 1. Зайти на главную страницу магазина 2. Открыть DevTools 3.
-    Воспользоваться режимом эмуляции мобильных устройств 4. Выбрать режим
-    эмуляции Iphone 12 pro
+  steps:
+  - Зайти на главную страницу магазина 
+  - Открыть DevTools 3
+  - Воспользоваться режимом эмуляции мобильных устройств 
+  - Выбрать режим эмуляции Iphone 12 pro
   expected-result: |
     Элементы сайта отображаются корректно
