--- a/regress-report.yml
+++ b/regress-report.yml
@@ -55,11 +55,12 @@
     Проверка сайта на адаптивность к мобильным устройствам
   status: pass
  
-- bugreports:
+- bugreports: 
 - summary: |
-      Язык переключается на "English" после перехода из корзины на главную страницу магазина
+    Язык переключается на "English" после перехода из корзины на главную
+    страницу магазина
   environment: |
-      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
   steps-to-reproduce: |
     - Зайти на главную страницу магазина 
     - Нажать кнопку "Language" на товаре
@@ -70,23 +71,24 @@
       Язык сайта не должен меняться 
     actual-result: |
       Язык сайта меняется на "English"
-
+      
 - summary: |
-      Проверка работы фильтра по цене 
-    environment: |
-      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
-    steps-to-reproduce: |
+    Проверка работы фильтра по цене 
+  environment: |
+    Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+  steps-to-reproduce: |
     - Зайти на главную страницу магазина 
     - Ввести диапазон цен от 20 до 40  
     expected-result: |
       В каталоге отображаются только товары подходящие под ценовой диапазон  
     actual-result: |
       В каталоге отображаются товары вне заданного ценового диапазона
-
+      
 - summary: |
-      Переход на главную страницу магазина возвращает в корзину ранее удаленные товары 
+    Переход на главную страницу магазина возвращает в корзину ранее
+    удаленные товары 
   environment: |
-      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
   steps-to-reproduce: |
     - Зайти на главную страницу магазина 
     - Добавить товар в корзину
@@ -96,4 +98,5 @@
     expected-result: |
       Открывается главная страница магазина, корзина пуста  
   actual-result: |
-      Открывается главная страница магазина, ранее удаленные товары возвращаются в корзину
+    Открывается главная страница магазина, ранее удаленные товары
+    возвращаются в корзину
