--- a/regress-report.yml
+++ b/regress-report.yml
@@ -62,31 +62,30 @@ test-cases:
      environment: |
        Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
      steps-to-reproduce: |
-    - Зайти на главную страницу магазина 
-    - Нажать кнопку "Language" на товаре
-    - Выбрать язык "Russian"
-    - Нажать на кнопку "Корзина"
-    - Нажать на кнопку "Магазин"
+       - Зайти на главную страницу магазина 
+       - Нажать кнопку "Language" на товаре
+       - Выбрать язык "Russian"
+       - Нажать на кнопку "Корзина"
+       - Нажать на кнопку "Магазин"
      expected-result: |
-      Язык сайта не должен меняться 
+       Язык сайта не должен меняться 
      actual-result: |
-      Язык сайта меняется на "English"
+       Язык сайта меняется на "English"
       
   - summary: |
-    Проверка работы фильтра по цене 
-  environment: |
-    Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
-  steps-to-reproduce: |
-    - Зайти на главную страницу магазина 
-    - Ввести диапазон цен от 20 до 40  
+      Проверка работы фильтра по цене 
+    environment: |
+      Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
+    steps-to-reproduce: |
+      - Зайти на главную страницу магазина 
+      - Ввести диапазон цен от 20 до 40  
     expected-result: |
       В каталоге отображаются только товары подходящие под ценовой диапазон  
     actual-result: |
       В каталоге отображаются товары вне заданного ценового диапазона
       
 - summary: |
-    Переход на главную страницу магазина возвращает в корзину ранее
-    удаленные товары 
+    Переход на главную страницу магазина возвращает в корзину ранее удаленные товары
   environment: |
     Google Chrome Версия 125.0.6422.77 (Официальная сборка), (64 бит)
   steps-to-reproduce: |
@@ -95,8 +94,8 @@ test-cases:
     - Нажать на кнопку "Корзина"
     - Нажать на кнопку "Очистить корзину"
     - Нажать на кнопку "Магазин"
-    expected-result: |
-      Открывается главная страница магазина, корзина пуста  
+  expected-result: |
+    Открывается главная страница магазина, корзина пуста  
   actual-result: |
-    Открывается главная страница магазина, ранее удаленные товары
-    возвращаются в корзину
+    Открывается главная страница магазина, ранее удаленные товары возвращаются в корзину
+    
