--- a/test-cases.yml
+++ b/test-cases.yml
@@ -72,7 +72,7 @@
     Выбранный товар добавляется в корзину и отображается корректно 
     
 - summary: |
-    Проверка удаления товара из корзины
+    Проверка функции очистки корзины
   requirement: |
     Товар удаляется и больше не отображается в корзине 
   prerequisites: |
